<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/imgAwal"
        android:layout_width="2500dp"
        android:layout_height="1000dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/hotel"
        tools:layout_editor_absoluteX="-1103dp"
        tools:layout_editor_absoluteY="-135dp" />

    <TextView
        android:id="@+id/textHotel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hotel_atma"
        android:textColor="@color/white"
        android:textSize="50dp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="52dp"
        tools:layout_editor_absoluteY="111dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/textJaya"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jaya"
        android:textColor="@color/white"
        android:textSize="50dp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="146dp"
        tools:layout_editor_absoluteY="192dp"
        app:layout_constraintTop_toBottomOf="@+id/textHotel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="375dp"
        android:layout_height="80dp"
        app:layout_constraintTop_toBottomOf="@+id/textJaya"
        app:layout_constraintEnd_toEndOf="@+id/textJaya"
        app:layout_constraintStart_toStartOf="@+id/textJaya"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="286dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnMasuk"
            android:layout_width="380dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:text="@string/masuk"
            tools:layout_editor_absoluteX="46dp"
            tools:layout_editor_absoluteY="341dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="375dp"
        android:layout_height="80dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="408dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDaftar"
            android:layout_width="380dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:text="@string/daftar"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="400dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout"
            app:layout_constraintStart_toStartOf="@+id/linearLayout"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>